[gd_scene load_steps=4 format=3 uid="uid://main_scene"]

[ext_resource type="Script" path="res://scripts/Main.gd" id="1_main"]
[ext_resource type="Script" path="res://scripts/Board.gd" id="2_board"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_12345"]
emission_shape = 1
emission_sphere_radius = 10.0
direction = Vector3(0, -1, 0)
spread = 45.0
gravity = Vector3(0, 98, 0)
initial_velocity_min = 50.0
initial_velocity_max = 100.0
color = Color(1, 1, 1, 1)

[node name="Main" type="Node2D"]
script = ExtResource("1_main")

[node name="Board" type="Node2D" parent="."]
script = ExtResource("2_board")

[node name="Particles" type="CPUParticles2D" parent="Board"]
process_material = SubResource("ParticleProcessMaterial_12345")
emitting = false
amount = 20
lifetime = 1.0
one_shot = true

[node name="UI" type="CanvasLayer" parent="."]

[node name="ScoreLabel" type="Label" parent="UI"]
anchors_preset = 1
anchor_left = 0.0
anchor_top = 0.0
offset_left = 50.0
offset_top = 50.0
offset_right = 150.0
offset_bottom = 74.0
text = "Score: 0"
horizontal_alignment = 1

[node name="MovesLabel" type="Label" parent="UI"]
anchors_preset = 1
anchor_left = 0.0
anchor_top = 0.0
offset_left = 50.0
offset_top = 80.0
offset_right = 150.0
offset_bottom = 104.0
text = "Moves: 30"
horizontal_alignment = 1

[node name="VictoryScreen" type="Panel" parent="UI"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 300.0
offset_top = 200.0
offset_right = -300.0
offset_bottom = -200.0

[node name="VictoryLabel" type="Label" parent="UI/VictoryScreen"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -50.0
offset_bottom = 50.0
text = "Level Complete!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RestartButton" type="Button" parent="UI/VictoryScreen"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -60.0
offset_right = 50.0
offset_bottom = -20.0
text = "Restart"

[node name="DefeatScreen" type="Panel" parent="UI"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 300.0
offset_top = 200.0
offset_right = -300.0
offset_bottom = -200.0

[node name="DefeatLabel" type="Label" parent="UI/DefeatScreen"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -50.0
offset_bottom = 50.0
text = "Out of Moves!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RestartButton" type="Button" parent="UI/DefeatScreen"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -60.0
offset_right = 50.0
offset_bottom = -20.0
text = "Try Again"